Fix icon alignment

--- a/css/DateInput.scss
+++ b/css/DateInput.scss
@@ -70,6 +70,7 @@ $caret-top: $react-dates-spacing-vertical-picker - $react-dates-width-tooltip-ar
 .DateInput__input-icon {
   display: table-cell;
   width: 20px;
+  line-height: 15px;
   vertical-align: middle;
   padding: 5px 10px;
   color: #909090;
